@@ -1817,93 +1817,108 @@ sub subtract_duration { return $_[0]->add_duration( $_[1]->inverse ) }
 
         return $self if $self->is_infinite;
 
-        if ( $deltas{days} ) {
-            $self->{local_rd_days} += $deltas{days};
-
-            $self->{utc_year} += int( $deltas{days} / 365 ) + 1;
+        my %orig = %{$self};
+        try {
+            $self->_add_duration($dur);
         }
+        catch {
+            %{$self} = %orig;
+            die $_;
+        };
+    }
+}
 
-        if ( $deltas{months} ) {
+sub _add_duration {
+    my $self = shift;
+    my $dur  = shift;
 
-            # For preserve mode, if it is the last day of the month, make
-            # it the 0th day of the following month (which then will
-            # normalize back to the last day of the new month).
-            my ( $y, $m, $d ) = (
-                  $dur->is_preserve_mode
-                ? $self->_rd2ymd( $self->{local_rd_days} + 1 )
-                : $self->_rd2ymd( $self->{local_rd_days} )
-            );
+    my %deltas = $dur->deltas;
 
-            $d -= 1 if $dur->is_preserve_mode;
+    if ( $deltas{days} ) {
+        $self->{local_rd_days} += $deltas{days};
 
-            if ( !$dur->is_wrap_mode && $d > 28 ) {
+        $self->{utc_year} += int( $deltas{days} / 365 ) + 1;
+    }
 
-                # find the rd for the last day of our target month
-                $self->{local_rd_days}
-                    = $self->_ymd2rd( $y, $m + $deltas{months} + 1, 0 );
+    if ( $deltas{months} ) {
 
-                # what day of the month is it? (discard year and month)
-                my $last_day
-                    = ( $self->_rd2ymd( $self->{local_rd_days} ) )[2];
-
-                # if our original day was less than the last day,
-                # use that instead
-                $self->{local_rd_days} -= $last_day - $d if $last_day > $d;
-            }
-            else {
-                $self->{local_rd_days}
-                    = $self->_ymd2rd( $y, $m + $deltas{months}, $d );
-            }
-
-            $self->{utc_year} += int( $deltas{months} / 12 ) + 1;
-        }
-
-        if ( $deltas{days} || $deltas{months} ) {
-            $self->_calc_utc_rd;
-
-            $self->_handle_offset_modifier( $self->second );
-        }
-
-        if ( $deltas{minutes} ) {
-            $self->{utc_rd_secs} += $deltas{minutes} * 60;
-
-            # This intentionally ignores leap seconds
-            $self->_normalize_tai_seconds(
-                $self->{utc_rd_days},
-                $self->{utc_rd_secs}
-            );
-        }
-
-        if ( $deltas{seconds} || $deltas{nanoseconds} ) {
-            $self->{utc_rd_secs} += $deltas{seconds};
-
-            if ( $deltas{nanoseconds} ) {
-                $self->{rd_nanosecs} += $deltas{nanoseconds};
-                $self->_normalize_nanoseconds(
-                    $self->{utc_rd_secs},
-                    $self->{rd_nanosecs}
-                );
-            }
-
-            $self->_normalize_seconds;
-
-            # This might be some big number much bigger than 60, but
-            # that's ok (there are tests in 19leap_second.t to confirm
-            # that)
-            $self->_handle_offset_modifier(
-                $self->second + $deltas{seconds} );
-        }
-
-        my $new = ( ref $self )->from_object(
-            object => $self,
-            locale => $self->{locale},
-            ( $self->{formatter} ? ( formatter => $self->{formatter} ) : () ),
+        # For preserve mode, if it is the last day of the month, make
+        # it the 0th day of the following month (which then will
+        # normalize back to the last day of the new month).
+        my ( $y, $m, $d ) = (
+              $dur->is_preserve_mode
+            ? $self->_rd2ymd( $self->{local_rd_days} + 1 )
+            : $self->_rd2ymd( $self->{local_rd_days} )
         );
 
-        %$self = %$new;
+        $d -= 1 if $dur->is_preserve_mode;
 
-        return $self;
+        if ( !$dur->is_wrap_mode && $d > 28 ) {
+
+            # find the rd for the last day of our target month
+            $self->{local_rd_days}
+                = $self->_ymd2rd( $y, $m + $deltas{months} + 1, 0 );
+
+            # what day of the month is it? (discard year and month)
+            my $last_day
+                = ( $self->_rd2ymd( $self->{local_rd_days} ) )[2];
+
+            # if our original day was less than the last day,
+            # use that instead
+            $self->{local_rd_days} -= $last_day - $d if $last_day > $d;
+        }
+        else {
+            $self->{local_rd_days}
+                = $self->_ymd2rd( $y, $m + $deltas{months}, $d );
+        }
+
+        $self->{utc_year} += int( $deltas{months} / 12 ) + 1;
     }
+
+    if ( $deltas{days} || $deltas{months} ) {
+        $self->_calc_utc_rd;
+
+        $self->_handle_offset_modifier( $self->second );
+    }
+
+    if ( $deltas{minutes} ) {
+        $self->{utc_rd_secs} += $deltas{minutes} * 60;
+
+        # This intentionally ignores leap seconds
+        $self->_normalize_tai_seconds(
+            $self->{utc_rd_days},
+            $self->{utc_rd_secs}
+        );
+    }
+
+    if ( $deltas{seconds} || $deltas{nanoseconds} ) {
+        $self->{utc_rd_secs} += $deltas{seconds};
+
+        if ( $deltas{nanoseconds} ) {
+            $self->{rd_nanosecs} += $deltas{nanoseconds};
+            $self->_normalize_nanoseconds(
+                $self->{utc_rd_secs},
+                $self->{rd_nanosecs}
+            );
+        }
+
+        $self->_normalize_seconds;
+
+        # This might be some big number much bigger than 60, but
+        # that's ok (there are tests in 19leap_second.t to confirm
+        # that)
+        $self->_handle_offset_modifier( $self->second + $deltas{seconds} );
+    }
+
+    my $new = ( ref $self )->from_object(
+        object => $self,
+        locale => $self->{locale},
+        ( $self->{formatter} ? ( formatter => $self->{formatter} ) : () ),
+    );
+
+    %$self = %$new;
+
+    return $self;
 }
 
 sub _compare_overload {
